.config/sway/hotkeys: Add non-multimedia volume keys.

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -11,12 +11,6 @@ bindsym {
   --locked XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
   --locked XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
 
-  # previous/next become volume keys:
-  --locked XF86AudioPrev exec --no-startup-id ~/bin/voldown
-  --locked XF86AudioNext exec --no-startup-id ~/bin/volup
-
-  --locked XF86AudioMute exec --no-startup-id ~/bin/volmutetoggle
-
   XF86Calculator exec ~/bin/calculator
   XF86Favorites exec ~/bin/screenshot
 
@@ -36,4 +30,19 @@ bindsym {
 
   $mod+o opacity plus 0.1
   $mod+shift+o opacity minus 0.1
+}
+
+bindsym {
+  # multimedia previous/next become volume keys:
+  --locked XF86AudioPrev exec --no-startup-id ~/bin/voldown
+  --locked XF86AudioNext exec --no-startup-id ~/bin/volup
+
+  --locked XF86AudioMute exec --no-startup-id ~/bin/volmutetoggle
+
+  # super & page up/down for volume keys (yes next is pg+down)
+  --locked $mod+Next exec --no-startup-id ~/bin/voldown
+  --locked $mod+Prior  exec --no-startup-id ~/bin/volup
+
+  # super & delete to toggle mute:
+  --locked $mod+delete exec --no-startup-id ~/bin/volmutetoggle
 }
