.config/sway/hotkeys: Use super & print key for screenshots.

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -4,8 +4,9 @@ bindsym {
   control+$alt+l exec ~/bin/screenlock.sway
   --locked control+$alt+s exec ~/bin/suspend.sway
 
-  $alt+s exec ~/bin/screenshot-partial.sway
-  $alt+Shift+s exec ~/bin/screenshot.sway
+  # printscreen / screenshot:
+  Print exec ~/bin/screenshot-partial.sway
+  Shift+Print exec ~/bin/screenshot.sway
 
   # Use xev to find keys:
   --locked XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
