--- a/.config/autostart/kanshi.desktop
+++ b/.config/autostart/kanshi.desktop
@@ -1,5 +1,10 @@
 [Desktop Entry]
-Exec=/usr/bin/kanshi
+# .config/systemd/user/kanshi.service will deal with this now:
+# update: turns out with systemd if we log into console first then kanshi will be started and it will be sad because sway isn't there. So we don't enable the service by default and ask sway to start the service via this desktop file instead.
+#Hidden=true
+
+#Exec=/usr/bin/kanshi
+Exec=/usr/bin/systemctl --user start kanshi
 Name=kanshi
 Comment=Dynamic output configuration
 Type=Application
