--- a/.config/autostart/mako.desktop
+++ b/.config/autostart/mako.desktop
@@ -1,5 +1,10 @@
 [Desktop Entry]
-Exec=/usr/bin/mako
+# .config/systemd/user/mako.service will deal with this now:
+# update: turns out with systemd if we log into console first then mako will be started and it will be sad because sway isn't there. So we don't enable the service by default and ask sway to start the service via this desktop file instead.
+#Hidden=true
+
+#Exec=/usr/bin/mako
+Exec=/usr/bin/systemctl --user start mako
 Name=mako
 Comment=notification daemon for Wayland
 Type=Application
