bin/run_menu: Add, use in sway.

--- a/.config/sway/hotkeys-essential.config
+++ b/.config/sway/hotkeys-essential.config
@@ -3,7 +3,8 @@ set $term ~/bin/terminal
 set $term_alt ~/bin/terminal.xfce
 
 #set $menu dmenu_run
-set $menu "rofi -combi-modi window,drun,run -show combi -modi combi"
+#set $menu "rofi -combi-modi window,drun,run -show combi -modi combi"
+set $menu "~/bin/run_menu"
 
 #set $menu_alt "rofi -show run"
 set $menu_alt "GDK_BACKEND=x11 ulauncher-toggle"
