--- a/.config/sway/config
+++ b/.config/sway/config
@@ -21,6 +21,10 @@
     xkb_options "grp:shift_caps_toggle"
   }
 
+  input "65261:24672:qmkbuilder_keyboard" {
+    xkb_layout "us,no"
+  }
+
   input "1267:8661:ELAN_Touchscreen" {
     # By default the input from the touchscreen on the laptop will map to a
     # position on the "global output layout", meaning that if e.g. an external
