--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -90,14 +90,15 @@ tabspaces: 8
 # Font configuration (changes require restart)
 font:
   # Normal (roman) font face
-  #normal:
+  normal:
     # Font family
     #
     # Default:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    #family: monospace
+    #family: bitstream vera sans mono
+    family: DejaVu Sans Mono
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -126,8 +127,13 @@ font:
 
   # Point size
   #size: 11.0
-  #size: 10.0
-  size: 9.0
+  #size: 9.0
+
+  # 2020-07-18: When screencasting it's nice to use a really big font size:
+  #size: 14.0
+  #
+  # Normal font size:
+  size: 10.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -276,7 +282,8 @@ visual_bell:
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
 #background_opacity: 1.0
-background_opacity: 0.8
+#background_opacity: 0.8
+background_opacity: 0.9
 
 # Mouse bindings
 #
