sway output changes

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -90,13 +90,35 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
 
 ### bar config:
 
+  # bar {
+  #     output *
+
+  #     # with this config we get double bars for specific outputs (below).
+  #     # without this config we don't get bars for new/unknown outputs...
+  #     position top
+
+  #     # default bar will hide
+  #     mode hide
+
+  #     swaybar_command /usr/bin/swaybar
+  #     #status_command /usr/bin/i3status
+  #     status_command /usr/bin/i3status-rs ~/.config/i3status-rs/config.toml
+  # }
+
   bar {
-      # with this config we get double bars for specific outputs (below).
-      # without this config we don't get bars for new/unknown outputs...
+      output $dellicious_out1
+      output $out_home_benq_right
+      #output HDMI-A-1
+      output $out_home_benq_left
+
       position top
 
+      # Laptop output is always visible
+      mode dock
+
       swaybar_command /usr/bin/swaybar
-      status_command /usr/bin/i3status
+      #status_command /usr/bin/i3status
+      status_command /usr/bin/i3status-rs ~/.config/i3status-rs/config.toml
   }
 
   # bar {
@@ -119,13 +141,13 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
   #     position top
   # }
 
-  # bar {
-  #     output $out_home_dell2
+  bar {
+      output $out_home_dell_under
 
-  #     # waybar doesn't like fedora 30?
-  #     #swaybar_command /usr/local/bin/waybar
-  #     swaybar_command /usr/bin/swaybar
-  #     status_command /usr/bin/i3status
+      swaybar_command /usr/bin/swaybar
 
-  #     position bottom
-  # }
+      #status_command /usr/bin/i3status
+      status_command /usr/bin/i3status-rs ~/.config/i3status-rs/config.toml
+
+      position bottom
+  }
