--- a/.config/sway/output.config
+++ b/.config/sway/output.config
@@ -10,6 +10,8 @@
   set $out_home_benq1 'BenQ Corporation BenQ G2450H 32C02755019'
   set $out_home_benq2 'BenQ Corporation BenQ G2450H 32C03067019'
 
+  set $out_home_benq_left $out_home_benq1
+
   set $out_home_switch 'Unknown EP-HDMI-RX 0x00005445'
 
 # common config:
