--- a/.config/sway/theme-air.config
+++ b/.config/sway/theme-air.config
@@ -7,18 +7,30 @@
   # It's nice to see if an application is xwayland or native wayland (xdg_shell):
   for_window [title="."] title_format "%title # %shell"
 
+  for_window [title="Sharing Indicator"] floating enable
+
+### Focus
+
   #focus_follows_mouse always
   focus_follows_mouse yes
+
+  focus_wrapping no
+
+### Gaps
 
   # Always show big gaps, even when single window:
   gaps inner 15
   #gaps outer 0
   #smart_gaps on
 
+### Borders
+
   # Thick border:
   default_border pixel 5
-  #hide_edge_borders smart
-  #hide_edge_borders both
+
+  # Only show borders when workspace has more than one visible child, and there's no gaps
+  hide_edge_borders smart_no_gaps
+  #smart_borders on
 
 ### Colors
 
