.config/sway: Update with adjustments.

--- a/.config/sway/output-dellicious.config
+++ b/.config/sway/output-dellicious.config
@@ -96,7 +96,7 @@ set $dellicious_out1 'Sharp Corporation 0x143E 0x00000000'
       position top
 
       swaybar_command /usr/bin/swaybar
-      status_command /usr/bin/i3status
+      status_command ~/bin/i3status-rs
   }
 
   # bar {
