--- a/.config/sway/theme-air.config
+++ b/.config/sway/theme-air.config
@@ -18,10 +18,11 @@
 
 ### Gaps
 
-  # Always show big gaps, even when single window:
   gaps inner 15
   #gaps outer 0
-  #smart_gaps on
+
+  # Hide gaps for single window:
+  smart_gaps on
 
 ### Borders
 
@@ -30,7 +31,9 @@
 
   # Only show borders when workspace has more than one visible child, and there's no gaps
   hide_edge_borders smart_no_gaps
-  #smart_borders on
+
+  # hide borders for single visible child
+  smart_borders on
 
 ### Colors
 
