--- a/.config/sway/config
+++ b/.config/sway/config
@@ -27,9 +27,21 @@
     # position on the "global output layout", meaning that if e.g. an external
     # output is connected and positioned to the right of the laptop then touch
     # events on the right side of the laptop screen will go to the external
-    # output... We prevent this by forcing all events from the laptop screen to
+    # output...
+    # We prevent this by forcing all events from the laptop screen to
     # go to the laptop output:
     map_to_output eDP-1
+  }
+
+  input "10900:20557:G2Touch_Multi-Touch" {
+    # By default the input from the touchscreen on the laptop will map to a
+    # position on the "global output layout", meaning that if e.g. an external
+    # output is connected and positioned to the right of the laptop then touch
+    # events on the right side of the laptop screen will go to the external
+    # output...
+    # We prevent this by forcing all events from the external screen to
+    # go to the external output:
+    map_to_output DP-1
   }
 
 ### Key bindings
