.config/sway/config: Mode "workspace" for hex names.

--- a/.config/sway/hotkeys-essential.config
+++ b/.config/sway/hotkeys-essential.config
@@ -163,3 +163,37 @@ set $menu_alt "GDK_BACKEND=x11 ulauncher-toggle"
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
 
+#
+# Special mode for workspaces above 9:
+#
+mode "workspace" {
+    bindsym 1 workspace 1
+    bindsym 2 workspace 2
+    bindsym 3 workspace 3
+    bindsym 4 workspace 4
+    bindsym 5 workspace 5
+    bindsym 6 workspace 6
+    bindsym 7 workspace 7
+    bindsym 8 workspace 8
+    bindsym 9 workspace 9
+
+    bindsym a workspace a
+    bindsym b workspace b
+    bindsym c workspace c
+    bindsym d workspace d
+    bindsym e workspace e
+    bindsym f workspace f
+
+    bindsym shift+a move container to workspace a
+    bindsym shift+b move container to workspace b
+    bindsym shift+c move container to workspace c
+    bindsym shift+d move container to workspace d
+    bindsym shift+e move container to workspace e
+    bindsym shift+f move container to workspace f
+
+    # Return to default mode
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+bindsym $mod+equal mode "workspace"
