bin/select-mode,select-scale: Add (for sway).

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -21,9 +21,11 @@ bindsym {
   # conveniently change resolution/scale of current display up/down.
   f2 exec ~/bin/sway-res-current
   shift+f2 exec ~/bin/sway-res-current-reverse
+  control+f2 exec ~/bin/select-mode.rb
 
   f3 exec ~/bin/sway-scale-current
   shift+f3 exec ~/bin/sway-scale-current-reverse
+  control+f3 exec ~/bin/select-scale.rb
 
   # turn gaps on/off. theme-air uses 15 pixels:
   $mod+g exec swaymsg gaps inner current set 0
