bin/select-rotation.rb: Add.

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -27,6 +27,8 @@ bindsym {
   shift+f3 exec ~/bin/sway-scale-current-reverse
   control+f3 exec ~/bin/select-scale.rb
 
+  control+f4 exec ~/bin/select-rotation.rb
+
   # turn gaps on/off. theme-air uses 15 pixels:
   $mod+g exec swaymsg gaps inner current set 0
   $mod+shift+g exec swaymsg gaps inner current set 15
