--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,5 @@
-[user]
-	email = christoffer@eliesen.no
-	name = S. Christoffer Eliesen
-
-# DON'T GIVE AWAY YOUR GITHUB TOKEN TO OTHERS
-[github]
-	user = sce
+[include]
+    path = .gitconfig-private
 
 [status]
   # Show detailed submodule info when doing git status:
@@ -116,3 +111,5 @@
   added = yellow
   changed = green
   untracked = cyan
+[init]
+	defaultBranch = main
