--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -13,6 +13,14 @@
   #TERM: xterm-256color
 
 window:
+  # Background opacity
+  #
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  #opacity: 1.0
+  #opacity: 0.8
+  opacity: 0.85
+
   # Allow terminal applications to change Alacritty's window title.
   dynamic_title: true
 
@@ -237,14 +245,6 @@ colors:
   #   `- { index: 16, color: '0xff00ff' }`
   #
   indexed_colors: []
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-#background_opacity: 1.0
-#background_opacity: 0.8
-background_opacity: 0.85
 
 # Mouse bindings
 #
