.gitconfig: Fix rebase complaints.

--- a/.gitconfig
+++ b/.gitconfig
@@ -31,7 +31,8 @@
   cia = commit --amend
   br = branch
   co = checkout
-  df = diff --submodule
+  #df = diff --submodule
+  df = diff
   dc = !git df --cached
   dfw = !git df --word-diff
   dcw = !git dc --word-diff
@@ -113,3 +114,9 @@
   untracked = cyan
 [init]
 	defaultBranch = main
+
+[core]
+   # rebases can often fail due to modified files that are not modified, and
+   # this seems to fix it:
+   # https://www.git-tower.com/blog/make-git-rebase-safe-on-osx/
+   trustctime = false
