--- a/.config/sway/output-kira.config
+++ b/.config/sway/output-kira.config
@@ -45,7 +45,8 @@
 
       # Start i3bar to display a workspace bar (plus the system information
       # i3status finds out, if available)
-      status_command /usr/bin/i3status
+      #status_command /usr/bin/i3status-rs
+       status_command ~/bin/i3status-rs
 
       position bottom
   }
@@ -59,7 +60,7 @@
       # waybar doesn't like fedora 30?
       #swaybar_command /usr/local/bin/waybar
       swaybar_command /usr/bin/swaybar
-       status_command /usr/bin/i3status
+       status_command ~/bin/i3status-rs
 
       position top
   }
