.config/sway: Alternative shortcuts for screen brightness.

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -18,6 +18,10 @@ bindsym {
   --locked XF86MonBrightnessUp exec brightnessctl s +10%
   --locked XF86MonBrightnessDown exec brightnessctl s 10%-
 
+  # in case missing/broken brightness buttons:
+  --locked $mod+up exec brightnessctl s +10%
+  --locked $mod+down exec brightnessctl s 10%-
+
   # conveniently change resolution/scale of current display up/down.
   f2 exec ~/bin/sway-res-current
   shift+f2 exec ~/bin/sway-res-current-reverse
