--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -114,8 +114,9 @@ font:
 
   # Point size
   #size: 11.0
-  size: 10.0
+  #size: 10.0
   #size: 9.0
+  size: 13.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
