.config/sway: Adjustments; add rename workspace

--- a/.config/sway/hotkeys-essential.config
+++ b/.config/sway/hotkeys-essential.config
@@ -31,6 +31,9 @@ set $menu_alt "GDK_BACKEND=x11 ulauncher-toggle"
     # mouse button for dragging.
     floating_modifier $mod normal
 
+    # rename current workspace
+    bindsym $mod+r exec ~/bin/sway-ws-name.sh
+
     # reload the configuration file
     bindsym $mod+Shift+c reload
 
@@ -76,10 +79,16 @@ set $menu_alt "GDK_BACKEND=x11 ulauncher-toggle"
     set $output-mod Mod4+control
 
     # vim keys changes output
-    bindsym $output-mod+h focus output left, exec ~/bin/sway-ws.rb
-    bindsym $output-mod+j focus output down, exec ~/bin/sway-ws.rb
-    bindsym $output-mod+k focus output up, exec ~/bin/sway-ws.rb
+    bindsym $output-mod+h focus output left,  exec ~/bin/sway-ws.rb
+    bindsym $output-mod+j focus output down,  exec ~/bin/sway-ws.rb
+    bindsym $output-mod+k focus output up,    exec ~/bin/sway-ws.rb
     bindsym $output-mod+l focus output right, exec ~/bin/sway-ws.rb
+
+    # outputmod + cursor keys also changes output
+    bindsym $output-mod+Left  focus output left,  exec ~/bin/sway-ws.rb
+    bindsym $output-mod+Down  focus output down,  exec ~/bin/sway-ws.rb
+    bindsym $output-mod+Up    focus output up,    exec ~/bin/sway-ws.rb
+    bindsym $output-mod+Right focus output right, exec ~/bin/sway-ws.rb
 
     # $output-mod+shift moves focused window to other outputs
     bindsym $output-mod+Shift+h move container to output left
