--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -1,7 +1,7 @@
 # (having a comment here makes vim understand the syntax of this file)
 
 bindsym {
-  control+$alt+l exec ~/bin/screenlock.sway
+  control+$alt+l exec ~/bin/screenlock.sway pixelated
   --locked control+$alt+s exec ~/bin/suspend.sway
 
   # printscreen / screenshot:
@@ -42,6 +42,10 @@ bindsym {
 }
 
 bindsym {
+  #
+  # Multimedia keys
+  #
+
   # multimedia previous/next become volume keys:
   --locked XF86AudioPrev exec --no-startup-id ~/bin/voldown
   --locked XF86AudioNext exec --no-startup-id ~/bin/volup
