--- a/.config/sway/theme-air.config
+++ b/.config/sway/theme-air.config
@@ -8,6 +8,7 @@
   for_window [title="."] title_format "%title # %shell"
 
   for_window [title="Sharing Indicator"] floating enable
+  for_window [app_id="zenity"] floating enable
 
 ### Focus
 
@@ -18,7 +19,8 @@
 
 ### Gaps
 
-  gaps inner 15
+  # gaps can be turned on/off with mod+g (mod+shift+g). default off.
+  #gaps inner 15
   #gaps outer 0
 
   # Hide gaps for single window:
