.config/sway: Add screenrecord hotkeys.

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -8,6 +8,9 @@ bindsym {
   Print exec ~/bin/screenshot-partial.sway
   Shift+Print exec ~/bin/screenshot.sway
 
+  control+Print exec "~/bin/,screenrecord-partial.sh"
+  control+Shift+Print exec "~/bin/,screenrecord.sh"
+
   # Use xev to find keys:
   --locked XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
   --locked XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
