.config/tmux: Add tpm and nordtheme.

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,7 +6,7 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # reload config file
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf \\; display "config reloaded"
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 # set -g mouse-select-window on
@@ -16,11 +16,30 @@ bind r source-file ~/.config/tmux/tmux.conf
 # Enable mouse mode (tmux 2.1 and above)
 # Turn the mouse on, but without copy mode dragging
 set -g mouse on
-unbind -n MouseDrag1Pane
-unbind -Tcopy-mode MouseDrag1Pane
+#unbind -n MouseDrag1Pane
+#unbind -Tcopy-mode MouseDrag1Pane
+
+# remove delay when hitting escape (which is quite annoying when using vim)
+# https://stackoverflow.com/a/13843382
+set -s escape-time 1
 
 ###############################################################################
 # Visuals
 ###############################################################################
 
 set -g status-left-length 40
+
+###############################################################################
+# tpm tmux plugin manager
+# https://github.com/tmux-plugins/tpm
+###############################################################################
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# nordtheme
+set -g @plugin "nordtheme/tmux"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
