--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,16 +1,21 @@
 {
   "dependencies": {
-    "coc-css": ">=1.2.3",
-    "coc-docker": ">=0.2.1",
-    "coc-eslint": ">=1.2.6",
-    "coc-git": ">=1.7.12",
-    "coc-highlight": ">=1.2.5",
-    "coc-html": ">=1.2.4",
-    "coc-json": ">=1.2.5",
-    "coc-lists": ">=1.3.8",
-    "coc-marketplace": ">=1.7.0",
-    "coc-prettier": ">=1.1.12",
-    "coc-rls": ">=1.1.5",
-    "coc-tsserver": ">=1.5.1"
-  }
+    "coc-css": ">=1.3.0",
+    "coc-docker": ">=1.0.2",
+    "coc-eslint": ">=1.6.0",
+    "coc-explorer": ">=0.26.4",
+    "coc-fzf-preview": ">=2.16.6",
+    "coc-git": ">=2.4.10",
+    "coc-highlight": ">=1.3.0",
+    "coc-html": ">=1.8.0",
+    "coc-json": ">=1.8.0",
+    "coc-lists": ">=1.5.1",
+    "coc-marketplace": ">=1.9.0",
+    "coc-prettier": ">=9.3.1",
+    "coc-react-refactor": ">=0.5.0",
+    "coc-tsserver": ">=1.10.5"
+  },
+  "disabled": [],
+  "locked": [],
+  "lastUpdate": 1682062515281
 }
