--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -16,7 +16,10 @@ bindsym {
   --locked XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
 
   XF86Calculator exec ~/bin/calculator
-  XF86Favorites exec ~/bin/screenshot
+  XF86Favorites exec "~/bin/,bitwarden"
+
+  $mod+b exec "~/bin/,bitwarden"
+  $mod+p exec 1password --quick-access
 
   --locked XF86MonBrightnessUp exec brightnessctl s +10%
   --locked XF86MonBrightnessDown exec brightnessctl s 10%-
@@ -42,9 +45,21 @@ bindsym {
 
   $mod+o opacity plus 0.1
   $mod+shift+o opacity minus 0.1
-}
 
-bindsym {
+  $mod+n makoctl menu wofi -d -p 'Choose action:'
+
+  #
+  # swayr
+  # https://sr.ht/~tsdh/swayr/
+  #
+
+  $mod+Tab exec ~/bin/swayr next-window
+  $mod+shift+Tab exec ~/bin/swayr prev-window
+
+  $mod+space exec ~/bin/swayr switch-workspace-or-window
+
+  $mod+u ~/bin/swayr switch-to-urgent-or-lru-window
+
   #
   # Multimedia keys
   #
