.config/autostart: Misc comments; revert to old behaviour.

--- a/.config/autostart/idlehandler.wayland.desktop
+++ b/.config/autostart/idlehandler.wayland.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Exec=idlehandler.wayland
+#Exec=systemctl --user start idlehandler
 Name=swayidle
 Type=Application
 OnlyShowIn=sway;
