--- a/.config/i3status-rs/config.toml
+++ b/.config/i3status-rs/config.toml
@@ -1,7 +1,16 @@
-# https://raw.githubusercontent.com/greshake/i3status-rust/master/example_config.toml
+icons_format = "{icon}"
 
+[theme]
 theme = "solarized-dark"
-icons = "awesome"
+[theme.overrides]
+idle_bg = "#123456"
+idle_fg = "#abcdef"
+
+[icons]
+icons = "awesome6"
+#[icons.overrides]
+#bat = ["|E|", "|_|", "|=|", "|F|"]
+#bat_charging = "|^| "
 
 # 2020-05-11: docker block seems stuck / not working...?
 # [[block]]
@@ -26,7 +35,6 @@ icons = "awesome"
 [[block]]
 block = "bluetooth"
 mac = "4C:87:5D:52:CB:5F"
-label = " Stens QC 35 II"
 
 # [[block]]
 # block = "disk_space"
@@ -41,87 +49,58 @@ label = " Stens QC 35 II"
 [[block]]
 block = "net"
 device = "tun0"
-#ip = true
-#ipv6 = true
-speed_up = false
-#graph_up = true
-graph_up = false
-#graph_down = true
-speed_down = false
-interval = 1
-use_bits = false
-hide_missing = true
+missing_format = ""
 
 [[block]]
 block = "net"
 device = "wlp3s0"
-ssid = true
-signal_strength = true
-#ip = true
-#ipv6 = true
-speed_up = false
-#graph_up = true
-graph_up = false
-#graph_down = true
-speed_down = false
-interval = 1
-use_bits = false
-hide_missing = true
-
-
-[[block]]
-block = "net"
-device = "enp7s0f3u1u3c2"
-#ssid = true
-#signal_strength = true
-ip = true
-#ipv6 = true
-speed_up = false
-#graph_up = true
-graph_up = false
-#graph_down = true
-speed_down = false
-interval = 1
-use_bits = false
-hide_missing = true
+format = " $icon {$ssid $signal_strength|Wired connection}"
+format_alt = " $icon {$device $frequency $ssid $signal_strength|Wired connection}"
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{Mup}%"
-format_swap = "{SUp}%"
+#format = " $icon $mem_total_used_percents.eng(w:2) "
+#format_alt = " $icon_swap $swap_used_percents.eng(w:2) "
+format = " $icon $mem_used_percents.eng(w:2) "
+format_alt = " $icon $mem_used.eng(w:4) $mem_used_percents.eng(w:2) "
 
 [[block]]
 block = "cpu"
 interval = 1
-
-# [[block]]
-# block = "load"
-# interval = 1
-# format = "{1m}"
+info_cpu = 20
+warning_cpu = 50
+critical_cpu = 90
+format = " $icon $utilization "
+format_alt = " $icon $barchart {$boost |}$frequency $utilization "
 
 [[block]]
 block = "temperature"
-collapsed = true
 interval = 10
-format = "{min}° min, {max}° max, {average}° avg"
+format = " $icon $max max "
+format_alt = " $icon $min min, $max max, $average avg "
 chip = "*-isa-*"
 
 [[block]]
 block = "sound"
+[[block.click]]
+button = "left"
+cmd = ",pavucontrol"
 
 [[block]]
 block = "backlight"
+invert_icons = true
+missing_format = ""
 
 [[block]]
 block = "battery"
 #driver = "upower"
 interval = 1
-format = "{percentage}% {time}"
+format = "{ $icon| }$percentage{$time | }"
+missing_format = ""
 
 [[block]]
 block = "time"
-#interval = 60
 interval = 1
-#format = "%a %d/%m %R"
-format = "%a %d/%m %H:%M:%S"
+[block.format]
+full = " $icon $timestamp.datetime(f:'%a %d/%m %H:%M:%S') "
+short = " $icon $timestamp.datetime(f:'%H:%M') "
