bin/activesink.sh: Support microphone volume control

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -12,8 +12,6 @@ bindsym {
   control+Shift+Print exec "~/bin/,screenrecord.sh"
 
   # Use xev to find keys:
-  --locked XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
-  --locked XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
 
   XF86Calculator exec ~/bin/calculator
   XF86Favorites exec "~/bin/,bitwarden"
@@ -64,11 +62,18 @@ bindsym {
   # Multimedia keys
   #
 
+  --locked XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
+  --locked XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
+
+  --locked shift+XF86AudioRaiseVolume exec --no-startup-id ~/bin/volmic-up
+  --locked shift+XF86AudioLowerVolume exec --no-startup-id ~/bin/volmic-down
+
   # multimedia previous/next become volume keys:
   --locked XF86AudioPrev exec --no-startup-id ~/bin/voldown
   --locked XF86AudioNext exec --no-startup-id ~/bin/volup
 
-  --locked XF86AudioMute exec --no-startup-id ~/bin/volmutetoggle
+  --locked XF86AudioMute    exec --no-startup-id ~/bin/volmutetoggle
+  --locked XF86AudioMicMute exec --no-startup-id ~/bin/volmic-mutetoggle
 
   # super & page up/down for volume keys (yes next is pg+down)
   --locked $mod+Next exec --no-startup-id ~/bin/voldown
