scripts rpmfusion.conf: Properly replace rpmfusion packages.

--- a/scripts/rpm.d/rpmfusion.conf
+++ b/scripts/rpm.d/rpmfusion.conf
@@ -28,8 +28,8 @@ packages_override["libavcodec-free"]="libavcodec-freeworld"
 
 # From https://docs.fedoraproject.org/en-US/fedora-silverblue/tips-and-tricks/#_enabling_rpm_fusion_repos
 #
-# "Replacing" the rpmfusion packages with themselves will remove the lock on the
-# versioned packages which allows them to be automatically updated and versioned
-# correctly:
-packages_replace["rpmfusion-free-release"]="rpmfusion-free-release"
-packages_replace["rpmfusion-nonfree-release"]="rpmfusion-nonfree-release"
+# "Replacing" the versioned rpmfusion packages with non-versioned variants will
+# remove the lock on the versioned packages which allows them to be
+# automatically updated and versioned correctly:
+packages_replace["rpmfusion-free-release-${fedora_version}-1.noarch"]="rpmfusion-free-release"
+packages_replace["rpmfusion-nonfree-release-${fedora_version}-1.noarch"]="rpmfusion-nonfree-release"
