.config/sway: Fullscreen browser windows inhibit screensaver.

--- a/.config/sway/theme-air.config
+++ b/.config/sway/theme-air.config
@@ -10,6 +10,13 @@
   for_window [title="Sharing Indicator"] floating enable
   for_window [app_id="zenity"] floating enable
 
+  # Fullscreen browser windows should inhibit screensaver:
+  for_window [app_id="org.mozilla.firefox"] inhibit_idle fullscreen
+  for_window [app_id="google-chrome"] inhibit_idle fullscreen
+
+  # xwayland:
+  for_window [instance="chromium-browser"] inhibit_idle fullscreen
+
 ### Focus
 
   #focus_follows_mouse always
